--- a/app/views/panel/student_exams/all_history.html.erb
+++ b/app/views/panel/student_exams/all_history.html.erb
@@ -1,11 +1,13 @@
 <div class="container py-4">
   <div class="page-header">
-    <h1 class="page-header__title">Análise</h1>
+    <h1 class="page-header__title">
+      <%= @exam.title %>
+    </h1>
   </div>
 
   <div class="row">
-    <div class="col-md-8">
-      <div class="row px-4 py-2 text-muted">
+    <div class="col-md-8 mb-2">
+      <div class="row px-4 py-2 text-muted d-none d-md-flex">
         <div class="col-3">
           <b>Questão</b>
         </div>
@@ -27,10 +29,10 @@
         <div class="card mb-1">
           <div class="card-body">
             <div class="row">
-              <div class="col-3"><b>#<%= question_index + @exam.start_question_number %></b></div>
-              <div class="col-3"><%= print_human_time(@user_answer.total_question_time(question_index)) %></div>
-              <div class="col-3"><%= letter_option(@user_answer.answers[question_index.to_s]) || '-' %></div>
-              <div class="col-3">
+              <div class="col-3 pr-0"><b>#<%= question_index + @exam.start_question_number %></b></div>
+              <div class="col-5 pr-0"><%= print_short_time(@user_answer.total_question_time(question_index)) %></div>
+              <div class="col-2"><%= letter_option(@user_answer.answers[question_index.to_s]) || '-' %></div>
+              <div class="col-2">
                 <% if(@user_answer.answers[question_index.to_s].present? && @user_answer.answers[question_index.to_s] == @exam.answers[question_index.to_s]) %>
                   <i class="fas fa-check text-success"></i>
                 <% else %>
@@ -62,9 +64,9 @@
               <b><%= print_human_time(@user_answer.event_duration(log)) %></b>
 
               <% if @user_answer.next_log(log)['event'] == 'select' %>
-                <div>e selecionou a <b>opção
-                  <%= letter_option(@user_answer.next_log(log)['index'].split('_')[1].to_i) %>
-                </b></div>
+                e selecionou a <b>opção
+                <%= letter_option(@user_answer.next_log(log)['index'].split('_')[1].to_i) %>
+              </b>
               <% elsif @user_answer.next_log(log)['subject'] == 'showQuestions' %>
                 <div>e voltou para a tela de questões</div>
               <% end %>
