--- a/app/views/panel/student_exams/index.html.erb
+++ b/app/views/panel/student_exams/index.html.erb
@@ -5,41 +5,51 @@
 
   <% if @exam_applications.empty? %>
     <div class="text-center">
-      <h3 class="text-muted">Nenhum simulado disponível</h3>
+      <h3 class="text-muted">Nenhum simulado.</h3>
     </div>
   <% end %>
+
+  <div class="row px-4 py-2 d-none d-md-flex">
+    <div class="col-8">
+      <b class="text-muted">Simulado</b>
+    </div>
+
+    <div class="col-4">
+      <b class="text-muted">Turma</b>
+    </div>
+  </div>
 
   <% @exam_applications.each do |exam_application| %>
     <div class="card mb-1">
       <div class="card-body">
         <div class="row align-items-center">
-          <div class="col h5 m-0">
-
-            <% if exam_application.finished_by_user?(current_user) %>
-              <%= exam_application.exam.title %><br>
-              <small>Concluído</small>
-            <% else %>
-              <a href="<%= panel_student_exam_start_path exam_application %>">
+          <div class="col-12 col-md-8 m-0 ellipsis">
+            <% if(!current_user.answered?(exam_application)) %>
+              <a href="<%= panel_exam_application_start_path(exam_application) %>">
                 <%= exam_application.exam.title %>
               </a>
+            <% else %>
+              <div class="text-muted">
+                <div class="row align-items-center">
+                  <div class="col-auto pr-0" style="min-width: 75px">
+                    <span class="badge badge-pill badge-primary" style="font-size: 0.9rem">
+                      <%= current_user.correctness_percentage(exam_application) %>%
+                    </span>
+                  </div>
+
+                  <div class="col ellipsis">
+                    <a href="<%= panel_student_exam_history_path(exam_application) %>">
+                      <%= exam_application.exam.title %>
+                    </a>
+                  </div>
+                </div>
+              </div>
             <% end %>
           </div>
 
-          <% if !exam_application.finished_by_user?(current_user) %>
-            <div class="col d-none d-md-block">
-              <div>Duração</div>
-              <div><b><%= exam_application.exam.duration_in_minutes %> minutos</b></div>
-            </div>
-
-            <div class="col d-none d-md-block">
-              <div>Questões</div>
-              <div><b><%= exam_application.exam.exam_questions.count %></b></div>
-            </div>
-
-            <div class="col-auto d-none d-md-block ml-auto">
-              <a href="<%= panel_student_exam_start_path exam_application %>" class="btn btn-primary">Começar</a>
-            </div>
-          <% end %>          
+          <div class="col-4 d-none d-md-block">
+            <%= exam_application.group.name %>
+          </div>
         </div>
       </div>
     </div>
