--- a/app/views/panel/students/edit.html.erb
+++ b/app/views/panel/students/edit.html.erb
@@ -1,11 +1,11 @@
-<div class="container py-5">
+<div class="container py-4">
   <div class="page-header">
-    <h1 class="page-header__title">Novo estudante</h1>
+    <h1 class="page-header__title">Editar estudante</h1>
 
     <div class="page-header__actions">
       <a href="<%= panel_students_path %>" class="btn btn-light">Cancelar</a>
     </div>
   </div>
 
-  <%= render partial: 'form', locals: { student: @new_student } %>
+  <%= render partial: 'form', locals: { student: @student } %>
 </div>
