Fix modal form inside exam form

--- a/app/views/layouts/panel.html.erb
+++ b/app/views/layouts/panel.html.erb
@@ -20,6 +20,8 @@
 
     <%= yield %>
 
+    <%= react_component('FooterOutlet') %>
+
     <footer class="mt-auto py-4">
       <div class="container text-muted text-center">
         Todos os direitos reservados <br><b>NAV10 2018</b>
